force-app/main/default/objects/ClientBenefit__c/ClientBenefit__c.object-meta.xml
<CustomObject>
    <label>Citizen Benefit</label>
    <nameField>
        <label>Citizen Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Citizen Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>