force-app/main/default/objects/ClientBenefit__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welfare and Supportive Services(DWSS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>