force-app/main/default/objects/ClientBenefit__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <label>Citizen</label>
    <referenceTo>NWD_Citizen__c</referenceTo>
    <relationshipLabel>Citizen Benefits</relationshipLabel>
    <relationshipName>Citizen_Benefits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>