force-app/main/default/objects/ClientBenefit__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Assistance</fullName>
            </value>
            <value>
                <fullName>Cash Assistance</fullName>
            </value>
            <value>
                <fullName>Medical Assistance</fullName>
            </value>
            <value>
                <fullName>Education Assistance</fullName>
            </value>
            <value>
                <fullName>Workforce Assistance</fullName>
            </value>
            <value>
                <fullName>ChildCare Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>